2000-11-08 19:58:58  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* mml2015.el (mml2015-gpg-decrypt-1): 
	(mml2015-gpg-verify): buffer-string has no argument in Emacs.

2000-11-08 16:37:02  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-cache.el (gnus-cache-generate-nov-databases): Reopen cache.

2000-11-08 08:38:30  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* pop3.el (pop3-munge-message-separator): A message may have an
	empty body.

2000-11-07 18:02:26  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* mm-uu.el (mm-uu-type-alist): Don't test pgp stuff.
	(mm-uu-pgp-encrypted-extract): Clean mml2015 buffer.
	(mm-uu-pgp-signed-extract): Use coding-system.

2000-11-07 14:33:19  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-art.el (gnus-mime-display-part): Show MIME security button.
	(gnus-insert-mime-security-button): New function.
	* mm-decode.el (mm-possibly-verify-or-decrypt): Add security info.
	* mml2015.el:  Add security info when verify or decrypt.
	* mm-uu.el (mm-uu-pgp-signed-extract): Use multipart.
	(mm-uu-pgp-encrypted-extract): Ditto.

2000-11-07 08:49:36  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* mm-decode.el (mm-display-parts): New function.
	* gnus-art.el (gnus-mime-view-all-parts): Use it. Remove parts first.

2000-02-02 Alexandre Oliva <oliva@lsd.ic.unicamp.br>

	* gnus-mlspl.el: Documentation tweaks.
	
2000-11-06 22:06:44  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* mm-decode.el (mm-possibly-verify-or-decrypt): Fix.  
	* gnus-art.el (gnus-article-encrypt-body): Rename and support prefix
	argument.

2000-11-06 19:10:14  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* rfc2231.el (rfc2231-encode-string): Use us-ascii if charset is nil.

2000-11-06 18:17:53  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-art.el (gnus-article-encrypt): New function.
	(gnus-article-encrypt-protocol-alist): New variable.
	(gnus-article-encrypt-protocol): New variable.
	* mml2015.el (mml2015-self-encrypt): New function.
	(mml2015-mailcrypt-encrypt): Set mc-pgp-always-sign.
